--- a/EmployeeTableCRUD/src/app/employee-dashboard/employee-dashboard.component.html
+++ b/EmployeeTableCRUD/src/app/employee-dashboard/employee-dashboard.component.html
@@ -5,7 +5,7 @@
     <div class="container-fluid">
         <h1 style="color: aliceblue;">Employee Table</h1>
         <div class="d-flex">
-            <button class="btn btn-success">Add Employee</button>
+            <button >Add Employee</button>
         </div>
 
     </div>
@@ -33,3 +33,27 @@
         </tr>
     </tbody>
 </table>
+
+<!-- Button trigger modal -->
+
+  
+  <!-- Modal -->
+  <!-- <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          ...
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-primary">Save changes</button>
+        </div>
+      </div>
+    </div>
+  </div> -->
